# inspection-testing-example

./: inspection-testing-example.cabal
src/: Example.hs  Example2.hs
