name: inspection-testing-example
version: 0.1
build-type: Simple
cabal-version: >= 1.10

executable inspection-testing-example
  hs-source-dirs: src
  main-is: Example.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    inspection-testing

executable inspection-testing-example2
  hs-source-dirs: src
  main-is: Example2.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    inspection-testing
